--- a/src/Nix.BuildingBlocks/Nix.BuildingBlocks.csproj
+++ b/src/Nix.BuildingBlocks/Nix.BuildingBlocks.csproj
@@ -7,12 +7,12 @@
     
     <!-- NuGet Package Metadata -->
     <PackageId>FitCourse.Nix.BuildingBlocks</PackageId>
-    <Version>1.0.0</Version>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Nix Team</Authors>
     <Company>Nix</Company>
     <Description>Общие building blocks для микросервисов FitCourse: Domain entities, Events, Result, Guard, Outbox</Description>
     <PackageTags>fitcourse;nix;ddd;domain-driven-design;building-blocks;cqrs</PackageTags>
-    <RepositoryUrl>https://github.com/nix-fit/building-blocks</RepositoryUrl>
+    <RepositoryUrl>https://github.com/nix-fit-org/back-lib-building-blocks</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     
