--- a/src/Nix.Messaging/Nix.Messaging.csproj
+++ b/src/Nix.Messaging/Nix.Messaging.csproj
@@ -7,12 +7,12 @@
     
     <!-- NuGet Package Metadata -->
     <PackageId>FitCourse.Nix.Messaging</PackageId>
-    <Version>1.0.0</Version>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Nix Team</Authors>
     <Company>Nix</Company>
     <Description>Messaging abstractions и MassTransit integration для FitCourse микросервисов</Description>
     <PackageTags>fitcourse;nix;messaging;masstransit;rabbitmq;event-bus</PackageTags>
-    <RepositoryUrl>https://github.com/nix-fit/building-blocks</RepositoryUrl>
+    <RepositoryUrl>https://github.com/nix-fit-org/back-lib-building-blocks</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     
     <!-- Генерация символов для отладки -->
@@ -26,8 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- В NuGet пакете это будет PackageReference -->
-    <PackageReference Include="FitCourse.Nix.BuildingBlocks" Condition="'$(Configuration)' == 'Release'" />
+    <!-- В NuGet пакете это будет ProjectReference -->
+    <ProjectReference Include="..\Nix.BuildingBlocks\Nix.BuildingBlocks.csproj" Condition="'$(Configuration)' == 'Release'" />
     
     <!-- Для локальной разработки используем ProjectReference -->
     <ProjectReference Include="..\Nix.BuildingBlocks\Nix.BuildingBlocks.csproj" Condition="'$(Configuration)' != 'Release'" />
