--- a/src/Nix.Persistence/Nix.Persistence.csproj
+++ b/src/Nix.Persistence/Nix.Persistence.csproj
@@ -7,12 +7,12 @@
     
     <!-- NuGet Package Metadata -->
     <PackageId>FitCourse.Nix.Persistence</PackageId>
-    <Version>1.0.0</Version>
+    <VersionPrefix>1.0.0</VersionPrefix>
     <Authors>Nix Team</Authors>
     <Company>Nix</Company>
     <Description>Persistence patterns (Repository, UnitOfWork) для FitCourse микросервисов с EF Core</Description>
     <PackageTags>fitcourse;nix;persistence;repository;unit-of-work;ef-core</PackageTags>
-    <RepositoryUrl>https://github.com/nix-fit/building-blocks</RepositoryUrl>
+    <RepositoryUrl>https://github.com/nix-fit-org/back-lib-building-blocks</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     
     <!-- Генерация символов для отладки -->
@@ -27,8 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- В NuGet пакете это будет PackageReference -->
-    <PackageReference Include="FitCourse.Nix.BuildingBlocks" Condition="'$(Configuration)' == 'Release'" />
+    <!-- В NuGet пакете это будет ProjectReference -->
+    <ProjectReference Include="..\Nix.BuildingBlocks\Nix.BuildingBlocks.csproj" Condition="'$(Configuration)' == 'Release'" />
     
     <!-- Для локальной разработки используем ProjectReference -->
     <ProjectReference Include="..\Nix.BuildingBlocks\Nix.BuildingBlocks.csproj" Condition="'$(Configuration)' != 'Release'" />
